--- a/subway/templates/subway/main.html
+++ b/subway/templates/subway/main.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>팀:전원밤샘</title>
-</head>
-<body>
-공공 빅데이터를 활용한 실시간 개인 맞춤 지역 정보 제공 크로스플랫폼
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!-- 부가적인 테마 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+    <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+<title>{{ mth }},불타는 {{ dday }}</title>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+{{ sortrst }}
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">So Hot! Seoul Hot Ple</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                                <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/subway/1bz">핫플 순위</a>
+                    </li>
+                     <li>
+                        <a class="page-scroll" href="/subway/2em">콜플 순위</a>
+                    </li>
+                     <li>
+                        <a class="page-scroll" href="/subway/3my">여긴 핫플?</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/subway/4vs">핫플 비교</a>
+                    </li>
+                     <li>
+                        <a class="page-scroll" href="/subway/5cm">통근/통학</a>
+                    </li>
+                     <li>
+                        <a class="page-scroll" href="/subway/6fd">이달의 불금</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#replier">핫플 채팅</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#total">핫플 검색</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+<br>
+<br>
+<br><br>
+<div align="center">
+<h1>공공 빅데이터를 활용한</h1><h1> 실시간 개인 맞춤 지역 정보 제공 크로스플랫폼</h1></div>
 </body>
 </html>
