--- a/subway/templates/subway/6rst.html
+++ b/subway/templates/subway/6rst.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta charset="utf-8"/>
+<html>
 <head>
-    {% load compute %}
-        <!--bs 합쳐지고 최소화된 최신 CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <!-- 부가적인 테마 -->
@@ -10,11 +9,11 @@
 
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <meta charset="UTF-8">
-    <title>현재 혼잡 순위</title>
-</head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+<title>{{ mth }},불타는 {{ dday }}</title>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+{{ sortrst }}
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -37,7 +36,10 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a class="page-scroll" href="../"></a>
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                                <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="../1bz">핫플 순위</a>
@@ -73,49 +75,31 @@
     <br>
     <br>
    <br>
-
-    <div align="center">
-    <div class="jumbotron">
+<div align="center">
+    <div class="jumbotron" align="center">
         <br>
-  <h2>{{ now }}</h2>
-</div>
-{% for sts in blist %}
+  <h2>{{ yr }}년 현재</h2><h2> {{ mth }}</h2><h2>{{ name }}의 불타는 {{ dday }}요일 순위 </h2>
+    </div><br><br>
+<br><br>
+        {% for sts in dat%}
     {% if forloop.counter < 11%}
 {% ifequal forloop.counter 1 %}
      <div class="panel panel-primary">
                       {% else %}
   <div class="panel panel-info">
   {% endifequal %}
-    <div class="panel-heading">{{ forloop.counter }}위</div>
+    <div class="panel-heading">{{ forloop.counter }}위 {{ dday }}!</div>
 
 
 
 <div class="panel-body">
-    {% for st in sts %}
-        {%  ifequal forloop.counter 3 %}
-            {{ st }}
-        {% endifequal %}
-        {%  ifequal forloop.counter 4 %}
-            <h4>{{ st }}</h4>
-        {% endifequal %}
-        {%  ifequal forloop.counter time %}
-            <h3>{{ st }}명</h3> (현재 일 중 {{ st|percent:sts.28 }}%)
-                        <div class="progress">
-  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow={{ st|percent:sts.28 }}   aria-valuemin="0" aria-valuemax="100" style="width: {{ st|percent:sts.28 }}%">
-    <span class="sr-only">현재 일 중 {{ st|percent:sts.28 }} %</span>
-  </div>
-</div>
-        {% endifequal %}
-        {%  ifequal forloop.counter 29%}
-            당일 누적 {{ st }}명
-            <br>
-        {% endifequal %}
-    {% endfor %}
+
+<h4>{{ sts.0 }}일: {{ sts.1 }}명</h4>
+
 </div>
   </div>
         </div>
     {% endif %}
 {% endfor %}
-    </div>
-</body>
-</html>
+
+</div>
