--- a/subway/templates/subway/6fd.html
+++ b/subway/templates/subway/6fd.html
@@ -123,12 +123,12 @@
                      <li>
                         <a class="page-scroll" href="../6fd">이달의 불금</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#replier">핫플 채팅</a>
+                     <li>
+                        <a class="page-scroll" href="../chat">핫플 채팅</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#total">핫플 검색</a>
-                    </li>
+                        <a class="page-scroll" href="../search">핫플 검색</a>
+                    </li>>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
