--- a/subway/templates/subway/index.html
+++ b/subway/templates/subway/index.html
@@ -104,7 +104,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">핫플 채팅</a></h3>
+										<h3><a href="{% url 'subway:chat'%}" class="link">핫플 채팅</a></h3>
 										<p>미정</p>
 									</header>
 								</article>
@@ -113,7 +113,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">통합검색</a></h3>
+										<h3><a href="{% url 'subway:search'%}" class="link">통합검색</a></h3>
 										<p>미정</p>
 									</header>
 								</article>
