--- a/subway/templates/subway/2em.html
+++ b/subway/templates/subway/2em.html
@@ -61,10 +61,10 @@
                         <a class="page-scroll" href="../6fd">이달의 불금</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#replier">핫플 채팅</a>
+                        <a class="page-scroll" href="../chat">핫플 채팅</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#total">핫플 검색</a>
+                        <a class="page-scroll" href="../search">핫플 검색</a>
                     </li>
                 </ul>
             </div>
