--- a/subway/templates/subway/3rst.html
+++ b/subway/templates/subway/3rst.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load compute %}
-        <!--bs 합쳐지고 최소화된 최신 CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        {% load compute %}
+
+    <meta charset="UTF-8">
+    <title>{{ context.2 }}핫플 비교 결과</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <!-- 부가적인 테마 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <meta charset="UTF-8">
-    <title>현재 혼잡 순위</title>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
@@ -37,7 +38,10 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a class="page-scroll" href="../"></a>
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                               <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="../1bz">핫플 순위</a>
@@ -73,49 +77,39 @@
     <br>
     <br>
    <br>
-
-    <div align="center">
-    <div class="jumbotron">
+<div align="center">
+    <div class="jumbotron" align="center">
         <br>
-  <h2>{{ now }}</h2>
-</div>
-{% for sts in blist %}
-    {% if forloop.counter < 11%}
-{% ifequal forloop.counter 1 %}
+  <h2>{{ context.0.0 }} ,{{ context.0.1 }} 현재</h2>
+
      <div class="panel panel-primary">
-                      {% else %}
-  <div class="panel panel-info">
-  {% endifequal %}
-    <div class="panel-heading">{{ forloop.counter }}위</div>
-
-
-
+     
+        
+        <div class="panel-heading">{{ sts.0 }}</div>
+<h3>{{context.1}} {{context.2}}의</h3>
 <div class="panel-body">
-    {% for st in sts %}
-        {%  ifequal forloop.counter 3 %}
-            {{ st }}
-        {% endifequal %}
-        {%  ifequal forloop.counter 4 %}
-            <h4>{{ st }}</h4>
-        {% endifequal %}
-        {%  ifequal forloop.counter time %}
-            <h3>{{ st }}명</h3> (현재 일 중 {{ st|percent:sts.28 }}%)
-                        <div class="progress">
-  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow={{ st|percent:sts.28 }}   aria-valuemin="0" aria-valuemax="100" style="width: {{ st|percent:sts.28 }}%">
-    <span class="sr-only">현재 일 중 {{ st|percent:sts.28 }} %</span>
+<h4>인원은 {{context.3}}명 이고</h4>
+<h5>일일 점유율은 현재 {{ context.4 }}% 혼잡도 입니다</h5>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow={{ context.4 }}   aria-valuemin="0" aria-valuemax="100" style="width:{{ context.4 }}%">
+    <span class="sr-only">현재 일 중 {{ context.4 }} %</span>
   </div>
 </div>
-        {% endifequal %}
-        {%  ifequal forloop.counter 29%}
-            당일 누적 {{ st }}명
-            <br>
-        {% endifequal %}
-    {% endfor %}
 </div>
   </div>
         </div>
-    {% endif %}
-{% endfor %}
+
     </div>
+    
+    <script type="text/javascript" >
+        
+    var station_name="{{context.2}}";
+    if (!station_name) station_name = "*";
+    var date = new Date();
+    var from = "2014-" + (date.getMonth()+1) + "-" + date.getDate() + " 05:00";
+    var to = "2014-" + (date.getMonth()+1) + "-" + date.getDate() + " 24:00";
+    var address = "http://52.79.129.249:5601/app/kibana#/dashboard/4711c420-e9c3-11e6-8533-03a0eed8e2d4?_g=(refreshInterval:(display:Off,pause:!f,value:0),time:(from:'" + from + "',mode:absolute,to:'" + to + "'))&_a=(filters:!(),options:(darkTheme:!f),panels:!((col:7,id:%273e739bf0-e9c2-11e6-8533-03a0eed8e2d4%27,panelIndex:1,row:7,size_x:6,size_y:4,type:visualization),(col:9,id:ddb6c9d0-e9c2-11e6-8533-03a0eed8e2d4,panelIndex:2,row:1,size_x:4,size_y:4,type:visualization),(col:1,id:%2712b94dc0-e9c2-11e6-8533-03a0eed8e2d4%27,panelIndex:3,row:3,size_x:8,size_y:2,type:visualization),(col:1,id:%270f124950-e9c3-11e6-8533-03a0eed8e2d4%27,panelIndex:4,row:5,size_x:8,size_y:2,type:visualization),(col:1,id:%2761d86e40-e9c2-11e6-8533-03a0eed8e2d4%27,panelIndex:5,row:7,size_x:6,size_y:5,type:visualization),(col:6,id:%272b967000-e9c4-11e6-8533-03a0eed8e2d4%27,panelIndex:6,row:1,size_x:3,size_y:2,type:visualization),(col:1,id:%2704c4bc10-e9c5-11e6-8533-03a0eed8e2d4%27,panelIndex:7,row:1,size_x:5,size_y:2,type:visualization)),query:(query_string:(analyze_wildcard:!t,query:'" + station_name + "')),title:%27%EC%84%9C%EC%9A%B8%20%EC%A7%80%ED%95%98%EC%B2%A0%20%EB%8D%B0%EC%9D%B4%ED%84%B0%27,uiState:(P-1:(vis:(params:(sort:(columnIndex:!n,direction:!n)))),P-2:(vis:(legendOpen:!f)),P-3:(vis:(legendOpen:!f)),P-4:(vis:(legendOpen:!f)),P-5:(vis:(params:(sort:(columnIndex:!n,direction:!n))))))"
+    window.open(address,"_blank");
+    </script>
 </body>
 </html>
